Работа над свапом.

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,15 @@
     <title>Document</title>
 </head>
 <style>
-    html, body {
+    body {
         padding: 0;
         margin: 0;
         width: 100vw;
         height: 100vh;
         background: #000;
         overflow: hidden;
+        display: flex;
+        align-items: flex-end;
     }
 </style>
 <body>
