Поработал над внешним видом. Интеракция с игроком. Счет. Рандом.

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
         background: #000;
         overflow: hidden;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
+        justify-content: center;
     }
 </style>
 <body>
